# sayuri

./: .dockerignore  .exrc  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  License.txt  Makefile  README  README.md  UseAsStaticLibrary.md  as_static_library.md  book.csv  chess_board.cpp  chess_board.h  chess_board_analyze.cpp  chess_board_eval.cpp  chess_board_eval_weights.cpp  chess_board_gen_move.cpp  chess_board_pondering.cpp  chess_board_search.cpp  chess_def.cpp  chess_def.h  chess_util.cpp  chess_util.h  eval_list.txt  game_record.cpp  main.cpp  misaki  misaki_debug.cpp  misaki_debug.h  move.cpp  move.h  opening_book.cpp  opening_book_maker_main.cpp  openingbookmaker  pgn_parser.cpp  pgn_parser.h  test  test_book.csv  (+7 more)
Documents/: annotated.html  annotated.js  chess__def_8h.html  chess__def_8h.js  chess__def_8h_source.html  chess__engine_8cpp.html  chess__engine_8cpp_source.html  chess__engine_8h.html  chess__engine_8h_source.html  chess__engine__search_8cpp.html  chess__engine__search_8cpp.js  chess__engine__search_8cpp_source.html  chess__util_8cpp.html  chess__util_8cpp_source.html  chess__util_8h.html  chess__util_8h_source.html  classSayuri_1_1ChessEngine-members.html  classSayuri_1_1ChessEngine.html  classSayuri_1_1ChessEngine.js  classSayuri_1_1EvalParams-members.html  classSayuri_1_1EvalParams.html  classSayuri_1_1EvalParams.js  classSayuri_1_1Evaluator-members.html  classSayuri_1_1Evaluator.html  classSayuri_1_1Evaluator.js  classSayuri_1_1FEN-members.html  classSayuri_1_1FEN.html  classSayuri_1_1FEN.js  classSayuri_1_1Fen-members.html  classSayuri_1_1Fen.html  classSayuri_1_1Fen.js  classSayuri_1_1HelperQueue-members.html  classSayuri_1_1HelperQueue.html  classSayuri_1_1HelperQueue.js  classSayuri_1_1Job-members.html  classSayuri_1_1Job.html  classSayuri_1_1Job.js  classSayuri_1_1MoveMaker-members.html  classSayuri_1_1MoveMaker.html  classSayuri_1_1MoveMaker.js  (+229 more)
Documents/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  (+82 more)
DocumentsHTML/: basic_functions.html  chess_engine_functions.html  core_functions.html  engine_message_symbol.html  index.html  readme.html  sayulisp.html
DocumentsHTML/res/: common.css  common.js
SampleGames/: sample_games.pgn
SayuriCompiled/Windows/For64Bit/: sayuri-2015.12.16-windows-64bit.zsh
Tools/BayesianPridictor/: README.md  bayesian-predictor.scm
Tools/Benchmark/: README.md  benchmark.scm
Tools/CodeGenerator/: gen_chess_util_extra_h.py  gen_evaluator_extra_h.py
Tools/MachineLearningTest/: README.md  initial-weights.scm  machine-learning-test.scm
Tools/PGN2EPD/: README.md  pgn2epd.scm
Tools/PlayWithSayuri/: README.md  play-with-sayuri.scm
Tools/SayulispEditor/: README.md  gen-default-params.scm  sayulisp-editor.py
Tools/SayulispEditor/src/: __init__.py  base_window.py  board_frame.py  common.py  default_params.scm  evalparams_windows.py  linegraph_frame.py  lisp_handler.py  list.txt  main_frame.py  model.py  mywidget.py  searchparams_windows.py
misaki/: chess_board.h  chess_util.h  game_record.h  init.h  misaki.h  misaki_debug.h  move.h  opening_book.h  pgn_parser.h  transposition_table.h
src/: analyse.cpp  analyse.h  analyser.cpp  analyser.h  board.cpp  board.h  cache.cpp  cache.h  chess_board.cpp  chess_board.h.html  chess_board_eval.cpp  chess_board_eval_weights.cpp  chess_board_pondering.cpp  chess_board_search.cpp  chess_def.cpp  chess_def.h  chess_engine.cpp  chess_engine.h  chess_engine_analyze.cpp  chess_engine_eval.cpp  chess_engine_eval_weights.cpp  chess_engine_gen_move.cpp  chess_engine_move_maker.cpp  chess_engine_pondering.cpp  chess_engine_pv_line.cpp  chess_engine_search.cpp  chess_engine_test.cpp  chess_util.cpp  chess_util.h  chess_util_extra.h  common.h  debug.cpp  debug.h  error.cpp  error.h  evaluator.cpp  evaluator.h  evaluator_extra.h  fen.cpp  fen.h  (+46 more)
